<resources>
    <string name="app_name">MyComics</string>

    <!--  HamburgerMenu  -->
    <string name="HamburgerMenuTitle">Menu</string>
    <string name="HamburgerMenuCollection">COLLEC</string>
    <string name="HamburgerMenuSeries">SERIES</string>
    <string name="HamburgerMenuBooks">BOOKS</string>
    <string name="HamburgerMenuAuthors">AUTHORS</string>
    <string name="HamburgerMenuEditors">EDITORS</string>
    <string name="HamburgerMenuSettings">SETTINGS</string>

    <!--  Searchfragment & SearchResultfragment  -->
    <string name="SearchHintFilterOrSearch">Filter or search</string>
    <string name="SearchHintSearch">Search</string>
    <string name="SearchResultTitle">SEARCH</string>

    <!--  Common data labels  -->
    <string name="zero" translatable="false">0</string>
    <string name="SeriesListLabel">Series</string>
    <string name="SerieLabel">Serie :</string>
    <string name="BooksListLabel">Books</string>
    <string name="BooksNoSerieListLabel">Books not in a serie</string>
    <string name="AuthorsListLabel">Authors</string>
    <string name="AuthorLabel">Author</string>
    <string name="AuthorsPartnersListLabel">Authors who worked together</string>
    <string name="EditorsListLabel">Editors</string>
    <string name="EditorLabel">Editor</string>
    <string name="EditorLabelHint">Editor name</string>

    <!--  Popup Buttons  -->
    <string name="btnConfirm">CONFIRM</string>
    <string name="btnAbort">ABORT</string>
    <string name="btnSearch">SEARCH</string>
    <string name="btnFilter">FILTER</string>


    <!--  HomeFragment  -->
    <string name="HomeFragmentTitle">HOME</string>

    <!--  CollectionFragment  -->
    <string name="CollectionFragmentTitle">COLLECTION</string>
    <string name="CollectionProfileLabel">Collection from profile</string>
    <string name="CollectionNbBooks">Number of Books</string>
    <string name="CollectionNbSeries">Number of Series</string>
    <string name="CollectionNbBooksNoSerie">Number of Book without Serie</string>
    <string name="CollectionLastBook">Last Book saved</string>
    <string name="CollectionBookNameOnly">Books having name only</string>Tomes à compléter/string>
    <string name="CollectionAloneItem">Enregistrements sans lien</string>

    <!--  Series  -->
    <string name="SeriesFragmentTitle">SERIES</string>
    <string name="Serie">Serie</string>
    <string name="SerieDetailFragmentTitle">SERIE DETAIL</string>
    <string name="SerieDetailTitle">Serie name</string>
    <string name="SeriePopupAddTitle">Enter serie name</string>
    <string name="SeriePopupAddHint">Serie name</string>
    <string name="SerieCreationSuccess">Serie created</string>
    <string name="SerieCreationError">Erreur creating Serie</string>
    <string name="SerieDuplicateError">Serie already exists, creation aborted</string>
    <string name="SeriePopupListTitle">Choose an existing Serie in the list</string>
    <string name="SerieDeleteConfirmName">Confirm delete Serie by writing the Serie name</string>
    <string name="SerieNameDoesntMatch">The Serie Name doesn\'t match</string>
    <string name="SerieUpdateError">Serie update error</string>
    <string name="SerieUpdateSuccess">Serie update success</string>
    <string name="SerieConfirmPictureRemoval">Confirm removal of Picture</string>



    <!--  Books  -->
    <string name="BooksFragmentTitle">BOOKS</string>
    <string name="BookDetailFragmentTitle">BOOK DETAIL</string>
    <string name="BookDetailTitle">Book title</string>
    <string name="BookDetailNumber">Number :</string>
    <string name="BookDetailNumberHint">Book number</string>
    <string name="BookDetailEditorPrice">Editor price :</string>
    <string name="BookDetailValue">Value :</string>
    <string name="BookDetailEditionDate">Edition date :</string>
    <string name="BookDetailEditionDateHint">MM/AAAA</string>
    <string name="BookDetailAutograph">Autographed :</string>
    <string name="BookDetailSpecialEdition">Special Edition :</string>
    <string name="BookDetailSpecialEditionHint">Special Edition label</string>

    <string name="BookPopupAddTitle">Enter book title</string>
    <string name="BookPopupAddHint">Book title</string>
    <string name="BookCreationSuccess">Book created</string>
    <string name="BookCreationError">Error creating Book</string>
    <string name="BookDuplicateError">Book already exists, creation aborted</string>
    <string name="BookAuthorPairDuplicate">is already linked to the Book</string>
    <string name="Book">Book</string>
    <string name="Books">Books</string>
    <string name="BookNumber">N.</string>
    <string name="BookConfirmSerieRemoval">Confirm removal of Serie</string>
    <string name="BookConfirmEditorRemoval">Confirm removal of Editor</string>
    <string name="BookConfirmPictureRemoval">Confirm removal of Picture</string>
    <string name="BookChooseAuthorRemoval">Choose Author to remove</string>
    <string name="BookWarningBookDelete">Final operation, confirm to delete</string>
    <string name="BookDeleteConfirmTitle">Title of the book to be deleted</string>
    <string name="BookTitleDoesntMatch">The title doesn\'t match</string>
    <string name="BookUpdateError">Book update error</string>
    <string name="BookUpdateSuccess">Book update success</string>
    <string name="BookRemoveAuthorError">Author removal error</string>


    <!--  Authors  -->
    <string name="AuthorsFragmentTitle">AUTHORS</string>
    <string name="Author">author</string>
    <string name="AuthorDetailFragmentTitle">AUTHOR DETAIL</string>
    <string name="AuthorDetailPseudonym">Author pseudonym</string>
    <string name="AuthorDetailLastNameTitle">Author last name</string>
    <string name="AuthorDetailLastName">Last name</string>
    <string name="AuthorDetailFirstNameTitle">Author first name</string>
    <string name="AuthorDetailFirstName">First name</string>
    <string name="AuthorPopupAddTitle">Enter author pseudonym or last name</string>
    <string name="AuthorPopupAddHint">Author pseudonym</string>
    <string name="AuthorCreationSuccess">Author created</string>
    <string name="AuthorCreationError">Erreur creating Author</string>
    <string name="AuthorDuplicateError">Author already exists, creation aborted</string>
    <string name="AuthorPopupAddListTitle">Choose an existing Author in the list or create new Author</string>
    <string name="AuthorPopupAddListHint">New Author pseudonym</string>
    <string name="AuthorDeleteConfirmPseudonym">Confirm delete Author by writing the Author pseudonym</string>
    <string name="AuthorPseudonymDoesntMatch">The Author Pseudonym doesn\'t match</string>
    <string name="AuthorUpdateError">Author update error</string>
    <string name="AuthorUpdateSuccess">Author update success</string>

    <!--  Editors  -->
    <string name="EditorsFragmentTitle">EDITORS</string>
    <string name="Editor">Editor</string>
    <string name="EditorDetailFragmentTitle">EDITOR DETAIL</string>
    <string name="EditorDetailName">Editor name</string>
    <string name="EditorPopupAddTitle">Enter editor name</string>
    <string name="EditorPopupAddHint">Editor name</string>
    <string name="EditorCreationSuccess">Editor created</string>
    <string name="EditorCreationError">Erreur creating Editor</string>
    <string name="EditorDuplicateError">Editor already exists, creation aborted</string>
    <string name="EditorPopupListTitle">Choose an existing Editor in the list</string>
    <string name="EditorDeleteConfirmName">Confirm delete Editor by writing the Editor name</string>
    <string name="EditorNameDoesntMatch">The Editor Name doesn\'t match</string>
    <string name="EditorUpdateError">Editor update error</string>
    <string name="EditorUpdateSuccess">Editor update success</string>

    <!--  SettingsFragment  -->
    <string name="SettingsFragmentTitle">SETTINGS</string>
    <string name="SettingsActiveProfileLabel">Active Profile</string>
    <string name="SettingsDarkModeLabel">Dark mode</string>
    <string name="SettingsProfilePopupAddTitle">Enter Profile name</string>
    <string name="SettingsProfilePopupAddHint">Profile name</string>
    <string name="SettingsProfileCreationSuccess">Profile created</string>
    <string name="SettingsProfileCreationError">Error creating Profile</string>
    <string name="SettingsProfileDuplicateError">Profile already exists, creation aborted</string>
    <string name="SettingsProfileChangeError">Active Profile change error</string>
    <string name="SettingsProfileChangeSuccess">Active Profile changed</string>
    <string name="SettingsChooseProfile">Choose a profile</string>
    <string name="SettingsWarningProfileDelete">If you delete this Profile, all the profile collection will be erased Final operation, confirm to delete</string>
    <string name="SettingsDeleteConfirmName">Name of the profile to be deleted</string>
    <string name="ProfileNameDoesntMatch">The name doesn\'t match</string>



</resources>