<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:layout_margin="10dp"
    android:background="@drawable/mc_block"
    android:orientation="vertical"
    tools:context=".fragments.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/svSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/mc_search_window"
            app:defaultQueryHint="@string/SearchHintFilterOrSearch"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:searchHintIcon="@drawable/search"
            app:searchIcon="@drawable/search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFilter"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/mc_button"
            android:fontFamily="@font/kronika"
            android:text="@string/btnFilter"
            android:textColor="?attr/mc_primary" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/mc_button"
            android:fontFamily="@font/kronika"
            android:text="@string/btnSearch"
            android:textColor="?attr/mc_primary" />
    </LinearLayout>
</LinearLayout>