<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="120dp"
    app:layout_collapseMode="none"
    tools:context=".fragments.AuthorDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/custom_blue"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <!-- Bandeau DETAIL SERIE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="5dp"
            android:background="@color/custom_beige"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFragAuthorDetailLogo"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/authors_blue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFragAuthorDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/kronika"
                android:gravity="center_vertical"
                android:paddingStart="50dp"
                android:text="@string/AuthorDetailFragmentTitle"
                android:textColor="@color/custom_blue"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- Body -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:weightSum="1">

                <!-- Boutons -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_corner_custom_beige"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <!-- Nom Auteur -->
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etAuthorDetailAuthorPseudonym"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="15dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corner_search"
                        android:fontFamily="@font/kronika"
                        android:gravity="center_horizontal"
                        android:text="@string/AuthorDetailPseudonym"
                        android:textColor="@color/custom_blue"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvAuthorDetailAuthorLastNameLabel"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/kronika"
                        android:text="@string/AuthorDetailLastNameTitle"
                        android:textAlignment="textStart"
                        android:textColor="@color/custom_blue"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etAuthorDetailAuthorLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#eee"
                            android:fontFamily="@font/kronika"
                            android:hint="@string/AuthorDetailLastName"
                            android:textAlignment="center"
                            android:textColor="@color/custom_blue"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvAuthorDetailAuthorFirstNameLabel"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/kronika"
                        android:text="@string/AuthorDetailFirstNameTitle"
                        android:textAlignment="textStart"
                        android:textColor="@color/custom_blue"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etAuthorDetailAuthorFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#eee"
                            android:fontFamily="@font/kronika"
                            android:hint="@string/AuthorDetailFirstName"
                            android:textAlignment="center"
                            android:textColor="@color/custom_blue"
                            android:textSize="14sp" />

                    </LinearLayout>
                    <!-- Liste Séries -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvAuthorDetailSeriesListLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/kronika"
                        android:text="@string/SeriesListLabel"
                        android:textAlignment="textStart"
                        android:textColor="@color/custom_blue"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:orientation="horizontal">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvAuthorDetailSeriesList"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="#eee" />
                    </LinearLayout>
                    <!-- Liste tomes -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvAuthorDetailBooksListLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/kronika"
                        android:text="@string/BooksNoSerieListLabel"
                        android:textAlignment="textStart"
                        android:textColor="@color/custom_blue"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="15dp"
                        android:orientation="horizontal">

                        <ListView
                            android:id="@+id/lvAuthorDetailBooksList"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="#eee"
                            android:nestedScrollingEnabled="true" />
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvAuthorDetailBooksList"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="#eee" />
                    </LinearLayout>
                    <!-- Liste Editeurs -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="15dp"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvAuthorDetailAuthorsListLabel"

                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="0dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginEnd="15dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/kronika"
                                android:text="@string/AuthorsPartnersListLabel"

                                android:textAlignment="textStart"
                                android:textColor="@color/custom_blue"
                                android:textSize="12sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvAuthorDetailEditorsListLabel"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginEnd="15dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/kronika"
                                android:text="@string/EditorsListLabel"
                                android:textAlignment="textStart"
                                android:textColor="@color/custom_blue"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="15dp"
                            android:layout_weight="1">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rvAuthorDetailAuthorsList"
                                android:layout_width="0dp"
                                android:layout_height="120dp"
                                android:layout_marginEnd="15dp"
                                android:layout_weight="1"
                                android:background="#eee" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rvAuthorDetailEditorsList"
                                android:layout_width="0dp"
                                android:layout_height="120dp"
                                android:layout_marginStart="15dp"
                                android:layout_weight="1"
                                android:background="#eee" />

                        </LinearLayout>
                    </LinearLayout>

                    <!-- Liste auteurs qui ont travaillé ensemble -->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_corner_custom_beige"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btnAuthorDetailSaveAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:src="@drawable/btn_save_blue" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btnAuthorDetailDeleteAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:paddingEnd="15dp"
                        android:src="@drawable/btn_delete_blue" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>