<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragHome"
    android:name="androidx.navigation.fragment.NavHostFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_blue"
    app:defaultNavHost="true"
    app:navGraph="@navigation/nav_graph"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <!-- Bandeau Accueil -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="5dp"
            android:background="@color/custom_beige"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewMaison"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/home_bleu" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/kronika"
                android:gravity="center_vertical"
                android:paddingStart="50dp"
                android:text="@string/HomeFragmentTitle"
                android:textColor="@color/custom_blue"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- Search bar -->
        <include
            android:id="@+id/sbSearch"
            layout="@layout/fragment_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />
        <!-- Bouton SERIES -->
        <LinearLayout
            android:id="@+id/btnAccueilSeries"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_custom_beige"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMenuAccueilSeries"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:src="@drawable/series_blue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMenuAccueilSeries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:fontFamily="@font/kronika"
                android:text="@string/HamburgerMenuSeries"
                android:textColor="@color/custom_blue"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- Bouton TOMES -->
        <LinearLayout
            android:id="@+id/btnAccueilTomes"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_custom_beige"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMenuAccueilTomes"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:src="@drawable/books_blue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMenuAccueiTomes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:fontFamily="@font/kronika"
                android:text="@string/HamburgerMenuBooks"
                android:textColor="@color/custom_blue"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- Bouton AUTEURS -->
        <LinearLayout
            android:id="@+id/btnAccueilAuteurs"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_custom_beige"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMenuAccueilAuteurs"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:src="@drawable/authors_blue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMenuAccueilAuteurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:fontFamily="@font/kronika"
                android:text="@string/HamburgerMenuAuthors"
                android:textColor="@color/custom_blue"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- Bouton EDITEURS -->
        <LinearLayout
            android:id="@+id/btnAccueilEditeurs"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_custom_beige"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMenuAccueilEditeurs"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:src="@drawable/editors_blue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMenuAccueilEditeurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:fontFamily="@font/kronika"
                android:text="@string/HamburgerMenuEditors"
                android:textColor="@color/custom_blue"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>